Lingpipe Gaz: Fixed an issue where lowercasing could break the offset mapping.
Special characters would get torn apart leading to difficult to track behaviour in the string normalization process. The solution is to use the transliterator for lowercasing.